crates/parse/src/tests/snapshots/unop_double_neg_bad.snap
---
source: crates/parse/src/tests.rs
assertion_line: 272
expression: "(test[1], ast, ast_string)"
---
- "--21"
- Err:
    message: "Unknown unary operator: `--`"
    line: 0
    column: 0
- "Unknown unary operator: `--`"

