crates/parse/src/tests/snapshots/unop_invalid.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- "*2"
- Err:
    - message: "Unknown unary operator: `*`"
      line: 0
      column: 0
- "Unknown unary operator: `*`"

